@@ -3,7 +3,7 @@
  * Displays a place hierachy
  *
  * phpGedView: Genealogy Viewer
- * Copyright (C) 2002 to 2008  PGV Development Team.  All rights reserved.
+ * Copyright (C) 2002 to 2008  PGV Development Team. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -102,14 +102,18 @@ function set_levelm($level, $parent) {
 		$levelm=0;
 	}
 	$fullplace = "";
-	for ($i=1; $i<=$level; $i++) {
-		if ($parent[$level-$i]!="")
-			$fullplace .= $parent[$level-$i].", ";
-		else
-			$fullplace .= "Unknown, ";
+	if ($level==0) 
+		$levelm=0;
+	else {
+		for ($i=1; $i<=$level; $i++) {
+			if ($parent[$level-$i]!="")
+				$fullplace .= $parent[$level-$i].", ";
+			else
+				$fullplace .= "Unknown, ";
+		}
+		$fullplace = substr($fullplace,0,-2);
+		$levelm = get_placeid($fullplace);
 	}
-	$fullplace = substr($fullplace,0,-2);
-	$levelm = get_placeid($fullplace);
 	return $levelm;
 }
 
@@ -117,23 +121,24 @@ function create_map() {
 	global $GOOGLEMAP_PH_XSIZE, $GOOGLEMAP_PH_YSIZE, $GOOGLEMAP_MAP_TYPE, $TEXT_DIRECTION, $pgv_lang;
 	// create the map
 	//<!-- start of map display -->
-	print "\n<br /><br />\n";
-	print "<table class=\"width80\"><tr valign=\"top\"><td class=\"center\">";
-	print "<div id=\"place_map\" style=\"border: 1px solid gray; width: ".$GOOGLEMAP_PH_XSIZE."px; height: ".$GOOGLEMAP_PH_YSIZE."px; ";
-	print "background-image: url('images/loading.gif'); background-position: center; background-repeat: no-repeat; overflow: hidden;\"></div>";
-	print "<table style=\"width: ".$GOOGLEMAP_PH_XSIZE."px\">";
+	echo "\n<br /><br />\n";
+	echo "<table class=\"width80\"><tr valign=\"top\"><td class=\"center\">";
+	echo "<div id=\"place_map\" style=\"border: 1px solid gray; width: ".$GOOGLEMAP_PH_XSIZE."px; height: ".$GOOGLEMAP_PH_YSIZE."px; ";
+	echo "background-image: url('images/loading.gif'); background-position: center; background-repeat: no-repeat; overflow: hidden;\"></div>";
+	echo "<table style=\"width: ".$GOOGLEMAP_PH_XSIZE."px\">";
 	if (PGV_USER_IS_ADMIN) {
-		print "<tr><td align=\"left\">\n";
-		print "<a href=\"module.php?mod=googlemap&amp;pgvaction=editconfig\">".$pgv_lang["gm_manage"]."</a>";
-		print "</td>\n";
-		print "<td align=\"center\">\n";
-		print "<a href=\"module.php?mod=googlemap&pgvaction=places\">".$pgv_lang["edit_place_locations"]."</a>";
-		print "</td>\n";
-		print "<td align=\"right\">\n";
-		print "<a href=\"module.php?mod=googlemap&pgvaction=placecheck\">".$pgv_lang["placecheck"]."</a>";
-		print "</td></tr>\n";
+		echo "<tr><td align=\"left\">\n";
+		echo "<a href=\"module.php?mod=googlemap&amp;pgvaction=editconfig\">".$pgv_lang["gm_manage"]."</a>";
+		echo "</td>\n";
+		echo "<td align=\"center\">\n";
+		echo "<a href=\"module.php?mod=googlemap&pgvaction=places\">".$pgv_lang["edit_place_locations"]."</a>";
+		echo "</td>\n";
+		echo "<td align=\"right\">\n";
+		echo "<a href=\"module.php?mod=googlemap&pgvaction=placecheck\">".$pgv_lang["placecheck"]."</a>";
+		echo "</td></tr>\n";
 	}
-	print "</table>\n";
+	echo "</table>\n";
+	echo "</td><td style=\"margin-left:15; vertical-align: top;\">";
 }
 
 function check_were_am_i($numls, $levelm) {
@@ -282,7 +287,7 @@ function print_gm_markers($place2, $level, $parent, $levelm, $linklevels, $place
 			echo "<br /><br /></div></td>\", icon_type, \"".PrintReady(addslashes($place2['place']))."\");\n";
 		}
 		else {
-			echo "<br /><br />".$place2['lati'].", ".$place2['long']."</div></td>\", icon_type, \"".PrintReady(addslashes($place2['place']))."\");\n";
+			echo "<br />$levelm<br />".$place2['lati'].", ".$place2['long']."</div></td>\", icon_type, \"".PrintReady(addslashes($place2['place']))."\");\n";
 		}
 	}
 	echo "place_map.addOverlay(marker);\n";
@@ -416,7 +421,7 @@ function map_scripts($numfound, $level, $parent, $linklevels, $placelevels, $pla
 	global $GOOGLEMAP_API_KEY, $GOOGLEMAP_MAP_TYPE, $GM_MAX_NOF_LEVELS, $GOOGLEMAP_PH_WHEEL, $GOOGLEMAP_PH_CONTROLS, $pgv_lang;
 	?>
 	<!-- Start of map scripts -->
-	<script src="http://maps.google.com/maps?file=api&amp;v=2.x&amp;key=<?php print $GOOGLEMAP_API_KEY; ?>" type="text/javascript"></script>
+	<script src="http://maps.google.com/maps?file=api&amp;v=2.x&amp;key=<?php echo $GOOGLEMAP_API_KEY; ?>" type="text/javascript"></script>
 	<script src="modules/googlemap/pgvGoogleMap.js" type="text/javascript"></script>
 	<script type="text/javascript">
 	// <![CDATA[
@@ -565,7 +570,7 @@ function map_scripts($numfound, $level, $parent, $linklevels, $placelevels, $pla
     // http://www.commchurch.freeserve.co.uk/
     // http://econym.googlepages.com/index.htm
 	//]]>
-	//version 1.2
+	//version 1.3
 	</script>
 	<?php
 }
